<resources>
    <string name="app_name">Tech Shop Manager+</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="other">Other</string>
    <string name="products">Products</string>
    <string name="sale">Sales</string>
    <string name="purchases">Purchases</string>
    <string name="customer">Customers</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="suppliers">Suppliers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Add customer xml -->
    <string name="add_heading">Add Customer </string>
    <string name="add_staff_heading">Add Staff </string>
    <string name="add_supplier_heading">Add Supplier </string>
    <!-- text views -->
    <string name="customerID_tv">Customer ID: </string>
    <string name="firstNameTV">First name: </string>
    <string name="lastNameTV">Last name: </string>
    <string name="emailTV">Email:  </string>
    <string name="phoneNumTV">Phone number:  </string>

    <string name="name">Name: </string>

    <string name="staffID_tv">Staff ID: </string>
    <string name="addSupplier">Add Supplier </string>
    <string name="supplierID_tv">Supplier ID: </string>
    <string name="shipmentsBtn">View Shipments</string>

    <!-- edit text hints -->
    <string name="customerIDHint">Enter customer ID </string>
    <string name="supplierIDHint">Enter supplier ID </string>
    <string name="staffIDHint">Enter staff ID </string>
    <string name="firstNameHint">Enter first name </string>
    <string name="nameHint">Enter name </string>
    <string name="lastNameHint">Enter last name </string>
    <string name="emailHint">Enter email </string>
    <string name="phoneNumHint">Enter phone number </string>
    <!-- buttons -->
    <string name="backButton">Back</string>
    <string name="DoneButton">Done</string>

    <!-- Add customer xml -->
    <string name="addButton">Add Customer</string>

    <!-- customer_item xml -->
    <string name="transactionBtn">View&#10; Transactions</string>
    <string name="editBtn">Edit</string>

    <!-- editCustomer xml -->
    <string name="editCustHeading">Edit Customers</string>
    <string name="editStaffHeading">Edit Staff</string>
    <string name="editSupplierHeading">Edit Supplier</string>

    <!-- activity_view_transaction xml -->
    <string name="transactionHeading">Transaction History</string>
    <string name="shipmentHeading">Shipment History</string>

    <string-array name="product_category_array">
        <item>Smart phones</item>
        <item>Smartphone Covers</item>
        <item>Chargers</item>
        <item>Screen Protectors</item>
        <item>Earphones</item>
    </string-array>

    <string-array name="month_range">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="staff">Staff</string>
    <string name="no_items_available">Oops. There is nothing to show here. </string>

</resources>