<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rel_layout_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:id="@+id/firstLin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/shipmentHeading"
            android:textSize="36sp"
            android:layout_alignParentTop="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/firstLin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="7"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/empty_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/error_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/no_items_available" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shipment_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_weight="6"
            tools:listitem="@layout/transaction_item">
        </androidx.recyclerview.widget.RecyclerView>


        <View
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginBottom="0dp"
            android:background="#B2B2B2"
            android:layout_below="@+id/transaction_recycler_view"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bar"
            android:layout_weight="0.5"
            android:weightSum="1">

            <Button
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/backButton"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>




</RelativeLayout>